# maimai-utils

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  test.py
.github/workflows/: python-package.yml  python-publish.yml
maimai_utils/: __init__.py  calculator.py  query.py
maimai_utils/data/: song_data.json
maimai_utils/entity/: __init__.py  chartsEntity.py  musciDetailEntity.py  scoresEntity.py
scripts/: README.md  get_charts_json.py
