[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "maimai-utils"
authors = [
    {name = "Kyoku", email = "hf4develop@163.com"},
]
version = "0.1.1"
description = "`maimai-utils`是使用SEGA所属的街机音游maimai的数据进行开发的Python模块，用于快速查询游戏相关的数据。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'importlib-metadata; python_version<"3.10"',
]